--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.20.4
-	yarn_mappings=1.20.4+build.1
-	loader_version=0.15.1
+	minecraft_version=1.20.5-rc1
+	yarn_mappings=1.20.5-rc1+build.2
+	loader_version=0.15.10
 
 # Mod Properties
-	mod_version = 1.0.3+1.20.3
+	mod_version = 1.0.3+1.20.5
 	maven_group = com.minenash
 	archives_base_name = monsters-in-the-closet
